@@ -1,19 +1,15 @@
 Package: spider
 Type: Package
 Title: Species Identity and Evolution in R
-Version: 1.2-0
-Date: 2012-12-17
-Author: Samuel Brown, Rupert Collins, Stephane Boyer, Marie-Caroline
-        Lefort, Jagoba Malumbres-Olarte, Cor Vink, Rob Cruickshank
+Version: 1.3-0
+Date: 2013-12-25
+Author: Samuel Brown, Rupert Collins, Stephane Boyer, Marie-Caroline Lefort, Jagoba Malumbres-Olarte, Cor Vink, Rob Cruickshank
 Maintainer: Samuel Brown <s_d_j_brown@hotmail.com>
-Description: A package for the analysis of species limits and DNA
-        barcoding data
+Description: A package for the analysis of species limits and DNA barcoding data
 License: GPL
 LazyLoad: yes
-Depends: R (>= 2.10), ape, pegas
+Depends: ape, pegas
+Packaged: 2013-12-27 04:41:31 UTC; sam
+NeedsCompilation: no
 Repository: CRAN
-Repository/R-Forge/Project: spider
-Repository/R-Forge/Revision: 54
-Repository/R-Forge/DateTimeStamp: 2012-12-24 04:03:43
-Date/Publication: 2012-12-25 15:41:37
-Packaged: 2012-12-24 07:15:15 UTC; rforge
+Date/Publication: 2013-12-27 07:30:41
