@@ -1,8 +1,9 @@
-8cffbff42a320767c6a0286d4ba211d5 *DESCRIPTION
-8c59543cbb8c8f589241363a94faf853 *NAMESPACE
-6b9a57a3e908bf386c8d99ad161a4e59 *NEWS
+6ef850e8e432b9a07bea47191083989c *DESCRIPTION
+ccedd6712a186c4e228ed15a91f11bc1 *NAMESPACE
+3ca298078ffa7ac200abef3880f87f64 *NEWS
 e62af89c4a267ddca83f35e3fe45aee2 *R/bestCloseMatch.R
-0e75edb6a63d0b769545a3443f1e3e14 *R/chaoHaplo.R
+fd8a6057196e4b37eacaf2702ffae307 *R/cgraph.R
+72989f994b8cbc46f268ae5685db274e *R/chaoHaplo.R
 4eff78217d84219aaebc735c28541926 *R/checkDNA.R
 5e3aa555d847d01f976df668706ce0ed *R/dataStat.R
 595c83f688fd9a2c296d8eb245aafa73 *R/haploAccum.R
@@ -15,13 +16,15 @@ e1b514b3ba62439d0c880a4fc16da87d *R/localMinima.R
 c3cc009b71dbe65bbe6abd320b5a75d1 *R/nearNeighbour.R
 ab6cd5493a4d65160a222f6f2b0f4c87 *R/nonConDist.R
 5b6311a4810307002e91df28a1129b31 *R/nucDiag.R
+ddfdef735e02ae9536ff0ad3e4d366cc *R/ordinDNA.R
 db011b6dc2ec60650faedd89f2f4f3af *R/paa.R
 3e4082cf030704b680d31a8124c0542e *R/plot.haploAccum.R
+22603e5ef969a93b61cc28616cae1b37 *R/plot.ordinDNA.R
 f67592797d2df601b3b5bbc8f9aabd61 *R/plot.slidWin.R
 a2241669fe8df719b7c5236be8d14d73 *R/polyBalance.R
 81468d47d63834ba47fe57655f67bf06 *R/rankSlidWin.R
 06830956b67fa1d383f114c296bc8d5d *R/read.BOLD.R
-c8ab5fa44a4ed546ccf4ff77f18d0c4e *R/read.GB.R
+ceb5f7e91c8f10fe002599df70565fc3 *R/read.GB.R
 ffc7ad16cf592a257baa14cd85a77764 *R/rmSingletons.R
 01dce3948a335e691f124a160208aad6 *R/rosenberg.R
 12f6fa948324572903f7f9ba30676a39 *R/search.BOLD.R
@@ -41,12 +44,13 @@ cfdccf7e0e59ae4440ceee670cb1b5cf *R/threshID.R
 3b2a366119a12d521dd36e1089d668af *R/tiporder.R
 88d340c437eb3fcbc80d5b27cec8fcb2 *R/titv.R
 9c4ccbfa0a9c40518aa0fb9a55c0c680 *R/tree.comp.R
-dd870ddb86ab52302f8d1345f4903a14 *data/anoteropsis.rda
-108722b7a8a8f3e9d32fe5586eb0523d *data/dolomedes.rda
-68c72e067be06267b15c4f925771815e *data/sarkar.rda
+edbf5b74d01751270e51c2440f10a279 *data/anoteropsis.rda
+a712abccd48075cbc548da442dfd926f *data/dolomedes.rda
+c6688b7a4a356ce5c708bd30cc626f5a *data/sarkar.rda
 4e86ccbe285fc2a1af25996cfc8b457f *inst/CITATION
 151dc35bb3daf70a1b274c7bb064e9c7 *man/anoteropsis.Rd
-a61e123913ecc29af55b17bdca40b8d8 *man/chaoHaplo.Rd
+9558e43c2f67120fd4c895a037fa1a43 *man/cgraph.Rd
+d597bc9189acf85ec1e6392dba999108 *man/chaoHaplo.Rd
 768ef7767fe1b49c6d84073a89655990 *man/checkDNA.Rd
 daf7029dc23352d4080fe069ef41f1be *man/dataStat.Rd
 e7c02820ae571e81c13adb7f068be728 *man/dolomedes.Rd
@@ -54,12 +58,14 @@ b35336167fe6b8df5adff3b35f433cbb *man/haploAccum.Rd
 f23d99ed5511d13b7e8d9448d0da6112 *man/heatmapSpp.Rd
 49de57ec34792547dd95134e3401d29f *man/is.ambig.Rd
 060748e190f0e69b41ca5c7fe273cdb9 *man/localMinima.Rd
-6b17b7ececd391709f96aa424255456a *man/monophyly.Rd
+e48d6963b281b10c9e3475db4b06643b *man/monophyly.Rd
 ac12c007eb3d9ffa710f6d30dec9108d *man/nearNeighbour.Rd
 a3f99dc4b41a24bbc2ab15b14d5f4122 *man/nonConDist.Rd
 7f6d54110e9c5ab22dba09a76250859f *man/nucDiag.Rd
+67bc6ecb798844864b7a704b9b61b33d *man/ordinDNA.Rd
 33d607edf25a5ffe7c249d7453b93a2e *man/paa.Rd
 c51185d75775b4412904cc5612a3bab9 *man/plot.haploAccum.Rd
+0f0c7676694d88e8a30c179cd7f9c415 *man/plot.ordinDNA.Rd
 1464a0d035a146a7ffc06186f6d888e1 *man/plot.slidWin.Rd
 596598619f59d979962f958adf55dd66 *man/polyBalance.Rd
 91212b502f4232ab8de1b32b7c7e187b *man/rankSlidWin.Rd
@@ -70,14 +76,14 @@ d5a18ce2ab6ba74a8298eb9bb909ab8e *man/rosenberg.Rd
 e327eac7dd250d34ac50c1a6e8064cc0 *man/sarkar.Rd
 6292e0149930ef0ed84547d77e9da426 *man/seeBarcode.Rd
 0ee9121c8b61193e56943efd509977f8 *man/seqStat.Rd
-26e6d68aec43af06aeb1235178a8f3db *man/slideAnalyses.Rd
+a6767e83ec9592f2d9010242c27e0acc *man/slideAnalyses.Rd
 0fd14c4652e09ef5618b371b9be57618 *man/slideBoxplots.Rd
 ea4e754f069b34fe3fc3d9e63caa9852 *man/slideNucDiag.Rd
 53579bb4209920f371ff0387f6785195 *man/slidingWindow.Rd
-f12dba5e5786349fb6e07f70022ff2ba *man/spider-package.Rd
+ca9ac3a2da2faaa5da664ffadbda1822 *man/spider-package.Rd
 84d9cd7f8592d23479bd367b572ca17d *man/sppDist.Rd
 ba0afcd2a953082fbf615c05e0c88969 *man/sppDistMatrix.Rd
-596a4ddc1e9f1a7b129e18390cf6c936 *man/sppVector.Rd
+7cb8795e205f98427cf6cce5c5489ea6 *man/sppVector.Rd
 37652708d38147697e7bf28e0966d677 *man/tajima.K.Rd
 d19607e2d857b9f66ecc031952c79900 *man/tclust.Rd
 625a1e3dc27added71281f730f25fa34 *man/threshOpt.Rd
