@@ -4,7 +4,10 @@
 exportPattern("^[^\\.]")
 
 # Import all packages listed as Imports or Depends
-import(ape, pegas)
+importFrom(ape, dist.dna, base.freq, seg.sites)
+importFrom(pegas, haplotype)
+importFrom(graphics, plot)
+
 
 #S3 methods
 S3method(plot, slidWin)
