@@ -1,4 +1,14 @@
 ############################################
+                                SPIDER VERSION 1.3-0
+				Released 25 December 2013
+				
+
+-- read.GB: Space removed from around the pipe in the default naming scheme.
+-- chaoHaplo: 95% confidence interval calculated around the estimated number of haplotypes.
+-- New functions: cgraph, ordinDNA and plot.ordinDNA
+-- namespace issues resolved
+
+############################################
                                 SPIDER VERSION 1.2-0
 				Released 17 November 2012
 				
